sql/test/unit/checks/fail_select_from_table.exp
create table if not exists test(x integer);
delete from test;
insert into test values (0), (1), (2);
select check(t.x < 2) from test t;
^
|
 ----- ERROR
Error: line 4, character 0:
Failed constraint: t.x < 2
